--- a/index.html
+++ b/index.html
@@ -120,7 +120,7 @@
             <article>
               <h3 class="text-center">Reglement 99 bugs LAN party</h3>
               <p>
-                De 99 bugs LAN party vindt plaats in het B-gebouw van VIVES campus Oostende, Zeedijk 101, 8400 Oostende, op <strong>22 juni vanaf 9u00 tot 23 juni 17u00</strong>.
+                De 99 bugs LAN party vindt plaats in het B-gebouw van VIVES campus Oostende, Zeedijk 101, 8400 Oostende, op <strong>donderdag 2 en vrijdag 3 februari 2017</strong>.
               </p>
               <p>
                 De deelnemers van de LAN party zijn studenten en oud-studenten van KHBO campus Oostende, VIVES campus Oostende en KU Leuven Technologiecampus Oostende. Deelname is <strong>gratis</strong>, maar inschrijven is verplicht. Het aantal <strong>deelnemers is beperkt tot 30</strong>. De organisatie behoudt het recht om op elk moment een persoon van deelname uit te sluiten.
